--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+spring.data.rest.basePath=/api
